--- a/NetworkApp/Storyboards/Base.lproj/Main.storyboard
+++ b/NetworkApp/Storyboards/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Moi-pZ-B5A">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Moi-pZ-B5A">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -27,42 +28,52 @@
                             <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="color" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </activityIndicatorView>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="zWy-Gr-5y8" customClass="CharacterCell" customModule="NetworkApp" customModuleProvider="target">
-                                <rect key="frame" x="20" y="35.5" width="167" height="229"/>
+                                <rect key="frame" x="20" y="50" width="167" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                    <rect key="frame" x="0.0" y="0.0" width="167" height="229"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="167" height="200"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qcx-b5-O0D" customClass="CharacterImageView" customModule="NetworkApp" customModuleProvider="target">
-                                            <rect key="frame" x="20" y="20" width="127" height="143"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aJr-hg-WOd">
+                                            <rect key="frame" x="10" y="172" width="147" height="18"/>
+                                            <color key="backgroundColor" red="0.23529221543629905" green="0.45623846969219173" blue="0.24177139100591952" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
                                             <userDefinedRuntimeAttributes>
-                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.CornerRadius">
-                                                    <integer key="value" value="20"/>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                    <integer key="value" value="5"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                            </userDefinedRuntimeAttributes>
+                                        </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qcx-b5-O0D" customClass="CharacterImageView" customModule="NetworkApp" customModuleProvider="target">
+                                            <rect key="frame" x="33" y="20" width="100" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="qcx-b5-O0D" secondAttribute="height" multiplier="1:1" id="4kB-Qm-g5J"/>
+                                            </constraints>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                    <integer key="value" value="50"/>
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aJr-hg-WOd">
-                                            <rect key="frame" x="20" y="188.5" width="127" height="20.5"/>
-                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
-                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                     </subviews>
                                 </view>
-                                <color key="backgroundColor" systemColor="placeholderTextColor"/>
+                                <color key="backgroundColor" white="1" alpha="0.10345095198675497" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="aJr-hg-WOd" secondAttribute="trailing" constant="20" id="0yM-XB-afY"/>
-                                    <constraint firstItem="aJr-hg-WOd" firstAttribute="leading" secondItem="zWy-Gr-5y8" secondAttribute="leading" constant="20" id="10k-is-yfZ"/>
-                                    <constraint firstItem="qcx-b5-O0D" firstAttribute="leading" secondItem="zWy-Gr-5y8" secondAttribute="leading" constant="20" id="SRY-aS-mBW"/>
-                                    <constraint firstAttribute="bottom" secondItem="qcx-b5-O0D" secondAttribute="bottom" constant="66" id="b1m-pu-6Kg"/>
-                                    <constraint firstItem="qcx-b5-O0D" firstAttribute="top" secondItem="zWy-Gr-5y8" secondAttribute="top" constant="20" id="fFt-0g-gGJ"/>
-                                    <constraint firstAttribute="bottom" secondItem="aJr-hg-WOd" secondAttribute="bottom" constant="20" id="lUT-82-pO8"/>
-                                    <constraint firstAttribute="trailing" secondItem="qcx-b5-O0D" secondAttribute="trailing" constant="20" id="t3Q-hF-kbp"/>
+                                    <constraint firstAttribute="trailing" secondItem="aJr-hg-WOd" secondAttribute="trailing" constant="10" id="0yM-XB-afY"/>
+                                    <constraint firstItem="aJr-hg-WOd" firstAttribute="leading" secondItem="zWy-Gr-5y8" secondAttribute="leading" constant="10" id="10k-is-yfZ"/>
+                                    <constraint firstItem="qcx-b5-O0D" firstAttribute="top" secondItem="zWy-Gr-5y8" secondAttribute="topMargin" constant="12" id="JRt-Wy-48V"/>
+                                    <constraint firstItem="qcx-b5-O0D" firstAttribute="leading" secondItem="zWy-Gr-5y8" secondAttribute="leadingMargin" constant="25" id="RRC-8A-Rba"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="qcx-b5-O0D" secondAttribute="trailing" constant="26" id="Sq8-p7-wcx"/>
+                                    <constraint firstAttribute="bottom" secondItem="aJr-hg-WOd" secondAttribute="bottom" constant="10" id="lUT-82-pO8"/>
                                 </constraints>
-                                <size key="customSize" width="167" height="229"/>
+                                <size key="customSize" width="167" height="200"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.CornerRadius">
                                         <integer key="value" value="15"/>
@@ -124,44 +135,52 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wL0-OI-OZU" customClass="CharacterImageView" customModule="NetworkApp" customModuleProvider="target">
                                 <rect key="frame" x="31" y="19" width="352" height="503.5"/>
                                 <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.CornerRadius">
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                         <integer key="value" value="10"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="R9V-Mo-11z">
-                                <rect key="frame" x="31" y="601.5" width="91" height="112.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="R9V-Mo-11z">
+                                <rect key="frame" x="20" y="601.5" width="374" height="112.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Birthdate" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xCh-Qp-yWC">
-                                        <rect key="frame" x="0.0" y="0.0" width="91" height="27.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   Birthdate" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xCh-Qp-yWC">
+                                        <rect key="frame" x="134" y="0.0" width="106.5" height="27.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CDg-UM-9HW">
-                                        <rect key="frame" x="0.0" y="42.5" width="91" height="27.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CDg-UM-9HW">
+                                        <rect key="frame" x="152" y="42.5" width="70" height="27.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k0v-J9-VRw">
-                                        <rect key="frame" x="0.0" y="85" width="91" height="27.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k0v-J9-VRw">
+                                        <rect key="frame" x="152" y="85" width="70" height="27.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
+                                <color key="backgroundColor" white="1" alpha="0.103450952" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="cvZ-OI-Mtz"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="cvZ-OI-Mtz" firstAttribute="bottom" secondItem="R9V-Mo-11z" secondAttribute="bottom" constant="60" id="3RF-rW-lyp"/>
                             <constraint firstItem="wL0-OI-OZU" firstAttribute="top" secondItem="cvZ-OI-Mtz" secondAttribute="top" constant="19" id="5dN-xy-zfg"/>
                             <constraint firstItem="cvZ-OI-Mtz" firstAttribute="bottom" secondItem="wL0-OI-OZU" secondAttribute="bottom" constant="251.5" id="97i-lM-Wn7"/>
                             <constraint firstItem="wL0-OI-OZU" firstAttribute="leading" secondItem="cvZ-OI-Mtz" secondAttribute="leading" constant="31" id="DRr-ws-hby"/>
-                            <constraint firstItem="cvZ-OI-Mtz" firstAttribute="bottom" secondItem="R9V-Mo-11z" secondAttribute="bottom" constant="60" id="IR0-sj-lVc"/>
+                            <constraint firstItem="R9V-Mo-11z" firstAttribute="leading" secondItem="cvZ-OI-Mtz" secondAttribute="leading" constant="20" id="FQD-KZ-50y"/>
                             <constraint firstItem="cvZ-OI-Mtz" firstAttribute="trailing" secondItem="wL0-OI-OZU" secondAttribute="trailing" constant="31" id="gEX-9S-N2g"/>
-                            <constraint firstItem="R9V-Mo-11z" firstAttribute="leading" secondItem="cvZ-OI-Mtz" secondAttribute="leading" constant="31" id="iWT-Jj-Xkf"/>
+                            <constraint firstItem="cvZ-OI-Mtz" firstAttribute="trailing" secondItem="R9V-Mo-11z" secondAttribute="trailing" constant="20" id="z30-oS-KJ8"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="01A-eo-v0q"/>
@@ -270,9 +289,6 @@
     <resources>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="placeholderTextColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
